anthos-config-management/acm-crd-examples/config-management-root/namespaces/use-cases/devtest-istio/testdriver-istio.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: hello-app-drv-py-1
  namespace: devtest-istio
  labels:
    app: hello-app-drv-py-1
    version: v3.0.6
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-app-drv-py-1
        version: v3.0.6
    spec:
      containers:
      - name: hello-app-drv-py
        image: us.gcr.io/anthos-crd-v1-dev-t2/hello-app-sm-py:v3.0.18
        imagePullPolicy: Always
        command: ["python"]
        args: [
          "hello_app_sm_py.py",
          "hello_app_no_istio_drv.py",
         ]
        ports:
          - name: "http-access"
            containerPort: 8080
