anthos-config-management/acm-crd-examples/config-management-root/namespaces/use-cases/devtest-istio/testdriver-svc-gateway.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# 
# Copyright 2019 Google LLC. This software is provided as-is, 
# without warranty or representation for any use or purpose.#
#



apiVersion: v1
kind: Service
metadata:
  name: hello-app-drv-py-1
  namespace: devtest-istio
  labels:
    app: hello-app-drv-py-1
    version: v3.0.6
spec:
  type: ClusterIP
  selector:
    app: hello-app-drv-py-1
    version: v3.0.6
  ports:
  - name: http-access
    port: 8080
    targetPort: 8080
    protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mygateway-http
  namespace: devtest-istio
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-access
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-service-external-vs
  namespace: devtest-istio
spec:
  hosts:
  - "*"
  gateways:
  - mygateway-http
  http:
  - match:
    - uri:
        prefix: /testcallseq
    route:
    - destination:
        port:
          number: 8080
        host: "hello-app-drv-py-1.devtest-istio.svc.cluster.local"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: "hello-app-drv-py-1"
  namespace: "devtest-istio"
spec:
  host: "hello-app-drv-py-1.devtest-istio.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
